# openll-asset-generator

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .travis.yml  ADAPT  AUTHORS  CMakeLists.txt  Dockerfile  FONT_LICENSE  README.md  appveyor.yml  build_docker.sh  llassetgen-config.cmake  run_docker.sh
cmake/: ClangFormat.cmake  ClangTidy.cmake  CompileOptions.cmake  Cppcheck.cmake  FindFreetype.cmake  FindPNG.cmake  Findclang_format.cmake  RuntimeDependencies.cmake  cpack-config.cmake  cpack-windows-dlls.cmake
data/llassetgen-rendering/: shader.frag  shader.vert
docs/api-docs/: CMakeLists.txt  doxyfile.in
source/: CMakeLists.txt
source/baselib/source/: baselib.cpp
source/examples/fibgui/: MainWindow.cpp
source/llassetgen/: CMakeLists.txt
source/llassetgen-cmd/: CMakeLists.txt  main.cpp
source/llassetgen-cmd/config/: example_atlas_config.ini  example_distfield_config.ini
source/llassetgen-cmd/include/: CLI11.h  FontFinder.h  FontRenderer.h  algorithms.h  helpstrings.h  presets.h
source/llassetgen-cmd/source/: FontFinder.cpp  FontRenderer.cpp  main.cpp
source/llassetgen-rendering/: CMakeLists.txt  WindowQt.cpp  WindowQt.h  main.cpp
source/llassetgen/include/llassetgen/: Atlas.h  Bitmap.h  DistanceTransform.h  FntWriter.h  FontFinder.h  Geometry.h  Image.h  Packing.h  Vec2.h  llassetgen.h
source/llassetgen/include/llassetgen/packing/: Algorithms.h  Types.h
source/llassetgen/include/llassetgen/packing/internal/: Common.h  MaxRectsPacker.h  ShelfPacker.h
source/llassetgen/source/: Bitmap.cpp  DistanceTransform.cpp  FntWriter.cpp  FontFinder.cpp  Image.cpp  Packing.cpp  llassetgen.cpp
source/llassetgen/source/packing/internal/: Common.cpp  MaxRectsPacker.cpp  ShelfPacker.cpp
source/tests/: CMakeLists.txt
source/tests/llassetgen-tests/: Atlas.cpp  CMakeLists.txt  FntWriter.cpp  Image.cpp  Packing.cpp  llassetgen-tests.cpp  main.cpp
